# max3set-genetic-algorithm-cpp

./: README.md
Max3SetProblem/: CMakeLists.txt  main.cpp
Max3SetProblem/DataFiles/max3sat/100/: m3s_100_1.txt  m3s_100_10.txt  m3s_100_11.txt  m3s_100_12.txt  m3s_100_13.txt  m3s_100_14.txt  m3s_100_15.txt  m3s_100_16.txt  m3s_100_17.txt  m3s_100_18.txt  m3s_100_19.txt  m3s_100_2.txt  m3s_100_20.txt  m3s_100_21.txt  m3s_100_22.txt  m3s_100_23.txt  m3s_100_24.txt  m3s_100_25.txt  m3s_100_26.txt  m3s_100_27.txt  m3s_100_28.txt  m3s_100_29.txt  m3s_100_3.txt  m3s_100_30.txt  m3s_100_31.txt  m3s_100_32.txt  m3s_100_33.txt  m3s_100_34.txt  m3s_100_35.txt  m3s_100_36.txt  m3s_100_37.txt  m3s_100_38.txt  m3s_100_39.txt  m3s_100_4.txt  m3s_100_40.txt  m3s_100_41.txt  m3s_100_42.txt  m3s_100_43.txt  m3s_100_44.txt  m3s_100_45.txt  (+10 more)
Max3SetProblem/DataFiles/max3sat/150/: m3s_150_1.txt  m3s_150_10.txt  m3s_150_11.txt  m3s_150_12.txt  m3s_150_13.txt  m3s_150_14.txt  m3s_150_15.txt  m3s_150_16.txt  m3s_150_17.txt  m3s_150_18.txt  m3s_150_19.txt  m3s_150_2.txt  m3s_150_20.txt  m3s_150_21.txt  m3s_150_22.txt  m3s_150_24.txt  m3s_150_25.txt  m3s_150_26.txt  m3s_150_27.txt  m3s_150_28.txt  m3s_150_29.txt  m3s_150_3.txt  m3s_150_30.txt  m3s_150_31.txt  m3s_150_32.txt  m3s_150_33.txt  m3s_150_34.txt  m3s_150_35.txt  m3s_150_36.txt  m3s_150_37.txt  (+18 more)
Max3SetProblem/Header Files/: CGAIndividual.h  CGAOptimizer.h  CMax3SatProblem.h
Max3SetProblem/Header Files/MySmartPointer/: Counter.h  SmartPointer.h
Max3SetProblem/Source Files/: CGAIndividual.cpp  CGAOptimizer.cpp  CMax3SatProblem.cpp
(+242 files in other folders)
